@@ -222,225 +222,6 @@ public class HebrewCalendar : Calendar {
 			era));
 	}
 
-#if false
-	//
-	// The following routines are commented out as they do not appear on the .NET Framework 1.1
-	//
-	
-	/// <summary>
-	/// Overridden. Adds days to a given date.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> to which to add
-	/// days.
-	/// </param>
-	/// <param name="days">The number of days to add.</param>
-	/// <returns>A new <see cref="T:System.DateTime"/> value, that
-	/// results from adding <paramref name="days"/> to the specified
-	/// DateTime.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> return value is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override DateTime AddDays(DateTime time, int days) {
-		DateTime t = base.AddDays(time, days);
-		M_CheckDateTime(t);
-		return t;
-	}
-
-	/// <summary>
-	/// Overridden. Adds hours to a given date.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> to which to add
-	/// hours.
-	/// </param>
-	/// <param name="hours">The number of hours to add.</param>
-	/// <returns>A new <see cref="T:System.DateTime"/> value, that
-	/// results from adding <paramref name="hours"/> to the specified
-	/// DateTime.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> return value is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override DateTime AddHours(DateTime time, int hours) {
-		DateTime t = base.AddHours(time, hours);
-		M_CheckDateTime(t);
-		return t;
-	}
-
-	/// <summary>
-	/// Overridden. Adds milliseconds to a given date.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> to which to add
-	/// milliseconds.
-	/// </param>
-	/// <param name="milliseconds">The number of milliseconds given as
-	/// double to add. Keep in mind the 100 nanosecond resolution of 
-	/// <see cref="T:System.DateTime"/>.
-	/// </param>
-	/// <returns>A new <see cref="T:System.DateTime"/> value, that
-	/// results from adding <paramref name="milliseconds"/> to the specified
-	/// DateTime.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> return value is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override DateTime AddMilliseconds(DateTime time,
-		double milliseconds)
-	{
-		DateTime t = base.AddMilliseconds(time, milliseconds);
-		M_CheckDateTime(t);
-		return t;
-	}
-
-	/// <summary>
-	/// Overridden. Adds minutes to a given date.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> to which to add
-	/// minutes.
-	/// </param>
-	/// <param name="minutes">The number of minutes to add.</param>
-	/// <returns>A new <see cref="T:System.DateTime"/> value, that
-	/// results from adding <paramref name="minutes"/> to the specified
-	/// DateTime.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> return value is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override DateTime AddMinutes(DateTime time, int minutes) {
-		DateTime t = base.AddMinutes(time, minutes);
-		M_CheckDateTime(t);
-		return t;
-	}
-
-	/// <summary>
-	/// Overridden. Adds seconds to a given date.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> to which to add
-	/// seconds.
-	/// </param>
-	/// <param name="seconds">The number of seconds to add.</param>
-	/// <returns>A new <see cref="T:System.DateTime"/> value, that
-	/// results from adding <paramref name="seconds"/> to the specified
-	/// DateTime.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> return value is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override DateTime AddSeconds(DateTime time, int seconds) {
-		DateTime t = base.AddSeconds(time, seconds);
-		M_CheckDateTime(t);
-		return t;
-	}
-
-	/// <summary>
-	/// Overridden. Adds weeks to a given date.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> to which to add
-	/// weeks.
-	/// </param>
-	/// <param name="weeks">The number of weeks to add.</param>
-	/// <returns>A new <see cref="T:System.DateTime"/> value, that
-	/// results from adding <paramref name="weeks"/> to the specified
-	/// DateTime.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> return value is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override DateTime AddWeeks(DateTime time, int weeks) {
-		DateTime t = base.AddWeeks(time, weeks);
-		M_CheckDateTime(t);
-		return t;
-	}
-
-	/// <summary>
-	/// Overridden. Gives the hour of the specified time.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> that specifies the
-	/// time.
-	/// </param>
-	/// <returns>An integer that gives the hour of the specified time,
-	/// starting with 0.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> parameter is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override int GetHour(DateTime time) {
-		M_CheckDateTime(time);
-		return base.GetHour(time);
-	}
-
-	/// <summary>
-	/// Overridden. Gives the milliseconds in the current second
-	/// of the specified time.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> that specifies the
-	/// time.
-	/// </param>
-	/// <returns>An integer that gives the milliseconds in the seconds
-	/// of the specified time, starting with 0.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> parameter is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override double GetMilliseconds(DateTime time) {
-		M_CheckDateTime(time);
-		return base.GetMilliseconds(time);
-	}
-
-	/// <summary>
-	/// Overridden. Gives the minute of the specified time.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> that specifies the
-	/// time.
-	/// </param>
-	/// <returns>An integer that gives the minute of the specified time,
-	/// starting with 0.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> parameter is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override int GetMinute(DateTime time) {
-		M_CheckDateTime(time);
-		return base.GetMinute(time);
-	}
-
-	/// <summary>
-	/// Overridden. Gives the second of the specified time.
-	/// </summary>
-	/// <param name="time">The
-	/// <see cref="T:System.DateTime"/> that specifies the
-	/// time.
-	/// </param>
-	/// <returns>An integer that gives the second of the specified time,
-	/// starting with 0.</returns>
-	/// <exception cref="T:System.ArgumentOutOfRangeException">
-	/// The exception is thrown if the
-	/// <see cref="T:System.DateTime"/> parameter is not in the years
-	/// between 5343 A.M. and 6000 A.M., inclusive.
-	/// </exception>
-	public override int GetSecond(DateTime time) {
-		M_CheckDateTime(time);
-		return base.GetMinute(time);
-	}
-#endif
 	
 	/// <summary>
 	/// Overrideden. Adds months to a given date.
